--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,9 @@ logging.level.org.hibernate.SQL=debug
 jwt.secret=osaprojektic
 security.basic.enable: false
 security.ignored=/**
-
+uploadDir=/resources
+multipart.enabled=true
+spring.servlet.multipart.max-request-size=30MB
+spring.servlet.multipart.max-file-size=30MB
 
 
